About info overflow fix images

--- a/includes/css/about.css
+++ b/includes/css/about.css
@@ -1,15 +1,12 @@
 /* .about-scroll-content-section {
-  font-family: 'Source Sans Pro', sans-serif; 
-  line-height: 2; 
-  font-size: 24px; 
-  padding-left: 60px; 
-  padding-right: 60px;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  flex-direction: column !important;
 } */
 
 .about-team-row-one .about-team-row-two{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  max-width: 100vw;
 }
 
 .about-image {
@@ -21,7 +18,7 @@
 
 .holder {   
   width: 12vw;
-  height: 12vh;
+  height: 12vw;
   display: inline-block; 
 }
 
